--- a/.github/workflows/build-on-tag.yml
+++ b/.github/workflows/build-on-tag.yml
@@ -24,9 +24,7 @@ jobs:
       - name: Build binary
         run: |
           # Build for multiple platforms (optional)
-          GOOS=linux GOARCH=amd64 go build -o ./bin/myapp-linux-amd64 .
-          GOOS=windows GOARCH=amd64 go build -o ./bin/myapp-windows-amd64.exe .
-          GOOS=darwin GOARCH=amd64 go build -o ./bin/myapp-darwin-amd64 .
+          GOOS=linux GOARCH=amd64 go build -o ./bin/dbeerer-linux-amd64 .
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
